--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/trash.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d6d938dc4562bd5dc0b9631f769ad049"></script>
-  <title>React App</title>
+  <title>쓰레기는 쓰레기통에</title>
 </head>
 
 <body>
