--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d6d938dc4562bd5dc0b9631f769ad049"></script>
-  <title>쓰레기는 쓰레기통에</title>
+  <title>분리위키</title>
 </head>
 
 <body>
