--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d6d938dc4562bd5dc0b9631f769ad049"></script>
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_API_KEY%"></script>
   <title>분리위키</title>
 </head>
 
